--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.4",
+    "typescript": "^5.3.3"
   }
 }
