--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "tv-api-ts-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "start": "node dist/index.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
   },
   "author": "clins777",
   "license": "MIT",
@@ -15,6 +17,8 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.4",
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   }
 }
